--- a/ASP.NET Core/Pages/Shared/_Layout.cshtml
+++ b/ASP.NET Core/Pages/Shared/_Layout.cshtml
@@ -4,18 +4,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - MailMergeExample</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+   @* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/MailMergeExample.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/MailMergeExample.styles.css" asp-append-version="true" />*@
     <!-- Syncfusion ASP.NET Core controls styles -->
     <link rel="stylesheet" href="https://cdn.syncfusion.com/ej2/20.2.43/fluent.css" />
     <!-- Syncfusion ASP.NET Core controls scripts -->
     <script src="https://cdn.syncfusion.com/ej2/20.2.43/dist/ej2.min.js"></script>
+    <script src="~/scripts/documenteditor/documenteditor-helper.js"></script> 
 </head>
 <body>
-    <!-- Syncfusion ASP.NET Core Script Manager -->
-    <ejs-scripts></ejs-scripts>
-    <div class="container">
+
+    <div class="container" style="width:100%">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
@@ -26,5 +26,7 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
+    <!-- Syncfusion ASP.NET Core Script Manager -->
+    <ejs-scripts></ejs-scripts>
 </body>
 </html>
