Added upload option for choosing data (JSON file) to perform mail merge.

--- a/ASP.NET Core/Pages/Shared/_Layout.cshtml
+++ b/ASP.NET Core/Pages/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <script src="https://cdn.syncfusion.com/ej2/20.2.43/dist/ej2.min.js"></script>
     <script src="~/scripts/documenteditor/documenteditor-helper.js"></script> 
 </head>
-<body>
+<body style="margin:0px">
 
     <div class="container" style="width:100%">
         <main role="main" class="pb-3">
