--- a/ASP.NET Core/Pages/Index.cshtml
+++ b/ASP.NET Core/Pages/Index.cshtml
@@ -4,17 +4,17 @@
     ViewData["Title"] = "Home page";
 }
 
-<div id="target">
+<div id="target" style="width:98%" >
     <div id='documenteditor_titlebar' class="e-de-ctn-title"></div>
-    <div style="display:inline-flex;width:100%">
-   <div class="col-lg-2 control-section" id='fieldDiv' style="width:20%;padding-right: inherit; padding-top:5px; padding-left: 5px;height:590px;border-left: 1px solid rgb(238, 238, 238);border-bottom: 1px solid rgb(238, 238, 238);">
-        <h5><label style="display:block;margin:1px;padding-top: 5px">Select Field to Insert</label></h5>
-   
+    <div style="display:inline-flex;width:90%">
+   <div class="col-lg-2 control-section" id='fieldDiv' style="width:18%;height:480px;border-left: 1px solid rgb(238, 238, 238);border-bottom: 1px solid rgb(238, 238, 238);">
+        <input type="file" id="uploadJsonButton" style="position:fixed;" excludeAcceptAllOption="True" accept=".json" onchange="onLoadJSON"/>
+        <h5><label style="display:block;">Select Field to Insert</label></h5>
         <div id='listview'></div>
     </div>
-    <div class="col-lg-10 control-section" style="width:80%;padding-left:0px;padding-right:0px;padding-top:0px;">
-        <div style="height:590px">
-            <ejs-documenteditorcontainer id="container" created="onCreated" height="590px"></ejs-documenteditorcontainer>
+    <div class="col-lg-10 control-section" style="width:78%;">
+        <div>
+            <ejs-documenteditorcontainer id="container" created="onCreated" height="780px"></ejs-documenteditorcontainer>
         </div>
     </div>
     </div>
@@ -54,9 +54,14 @@
   }
 function updateDocumentEditorSize() {
     //Resizes the document editor component to fit full browser window.
-    var windowWidth = window.innerWidth - (document.getElementById('fieldDiv').offsetWidth+16);
-    var windowHeight = window.innerHeight - (document.getElementById('documenteditor_titlebar').offsetHeight+16);
+    var windowWidth = document.getElementById('documenteditor_titlebar').offsetWidth - (document.getElementById('fieldDiv').offsetWidth);
+    var windowHeight = window.innerHeight - (document.getElementById('documenteditor_titlebar').offsetHeight);
     container.resize(windowWidth, windowHeight);
+  }
+  function onLoadJSON(args) {
+      if (args.target.files[0]) {
+            let path = args.target.files[0];
+        }
   }
     document.addEventListener('DOMContentLoaded', function () {
         
