updated view changes

--- a/ASP.NET Core/Pages/Index.cshtml
+++ b/ASP.NET Core/Pages/Index.cshtml
@@ -249,7 +249,8 @@
                     mergeDocument();
                     break;
                 case 'preview':
-                    document.getElementById('mailMergeDiv').style.display='block';
+                    document.getElementById('mailmergeDiv').style.display='block';
+					document.getElementById('mailmergeDiv').style.display='inline-flex';
                     break;
             }
             }
